Driver Layer added with BrowserOptions and Driver Factory